none: forgot to generate index for star sets loaded as part of an octree.